--- a/Strobr/Base.lproj/Main.storyboard
+++ b/Strobr/Base.lproj/Main.storyboard
@@ -1,19 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="AvenirNext.ttc">
-            <string>AvenirNext-Regular</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Info View Controller-->
         <scene sceneID="POc-dh-YIi">
@@ -43,7 +37,7 @@
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </textAttributes>
                                 <items>
-                                    <navigationItem title="How to use" id="TYC-dL-KVg">
+                                    <navigationItem title="Instructions" id="TYC-dL-KVg">
                                         <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="ndd-Oh-p1F">
                                             <color key="tintColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <connections>
@@ -53,78 +47,36 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hK3-5c-xfN">
-                                <rect key="frame" x="16" y="74" width="343" height="125"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hK3-5c-xfN">
+                                <rect key="frame" x="16" y="74" width="343" height="241.5"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="125" id="8gI-Da-Qd0"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="125" id="8gI-Da-Qd0"/>
                                 </constraints>
-                                <string key="text">This app functions as a visual stroboscope. It allows you to vary the frame rate of captured video in order to stop motion and determine the frequency of periodic actions - like the flashing of fluorescent lights or the spinning of a wheel.</string>
+                                <string key="text">This app functions as a visual stroboscope. It allows you to vary the frame rate of captured video in order to stop motion and determine the frequency of periodic actions, like the flashing of fluorescent lights or the spinning of a wheel.
+
+- Swipe up to increase the strope speed
+- Swipe down to decrease the strobe speed
+- Swipe right to double the strobe speed
+- Swipe left to halve the strobe speed
+- Tap the label to toggle between hertz &amp; RPM</string>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slide your finger up and down to vary the strobe speed." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XYp-gt-P6U">
-                                <rect key="frame" x="22" y="203" width="319" height="45"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="XKQ-CQ-iB7"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe left to halve the strobe speed." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uEB-S6-HuN">
-                                <rect key="frame" x="22" y="286" width="319" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="odx-fn-dJj"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe right to double the strobe speed." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yif-oe-mfU">
-                                <rect key="frame" x="22" y="252" width="319" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="J95-mj-MP4"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap the hertz display to switch between Hz and RPM." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p7h-ya-ekv">
-                                <rect key="frame" x="22" y="320" width="319" height="45"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="4OU-ad-eqw"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="p7h-ya-ekv" firstAttribute="top" secondItem="uEB-S6-HuN" secondAttribute="bottom" constant="4" id="22V-E0-Wp1"/>
-                            <constraint firstItem="XYp-gt-P6U" firstAttribute="top" secondItem="hK3-5c-xfN" secondAttribute="bottom" constant="4" id="3Yj-tU-aGC"/>
-                            <constraint firstItem="p7h-ya-ekv" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" constant="6" id="5ps-mA-lbO"/>
                             <constraint firstAttribute="trailing" secondItem="xIg-Mc-NCZ" secondAttribute="trailing" id="7L8-q7-bT1"/>
                             <constraint firstItem="xIg-Mc-NCZ" firstAttribute="top" secondItem="suv-xQ-gUw" secondAttribute="top" id="8ps-tS-NYj"/>
                             <constraint firstItem="D89-FB-fvn" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leading" id="Bk1-48-p0N"/>
                             <constraint firstItem="D89-FB-fvn" firstAttribute="top" secondItem="xIg-Mc-NCZ" secondAttribute="bottom" id="COJ-Gw-sRw"/>
                             <constraint firstItem="hK3-5c-xfN" firstAttribute="trailing" secondItem="suv-xQ-gUw" secondAttribute="trailingMargin" id="Ju7-Qz-ker"/>
                             <constraint firstAttribute="trailingMargin" secondItem="D89-FB-fvn" secondAttribute="trailing" constant="-16" id="KUi-94-aGF"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="uEB-S6-HuN" secondAttribute="trailing" constant="18" id="N9y-1d-Cgu"/>
-                            <constraint firstItem="XYp-gt-P6U" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" constant="6" id="Sds-Tm-dBS"/>
                             <constraint firstItem="D89-FB-fvn" firstAttribute="top" secondItem="BAG-IF-stq" secondAttribute="bottom" id="Y54-gP-viL"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="p7h-ya-ekv" secondAttribute="trailing" constant="18" id="ZmH-Qq-rlz"/>
                             <constraint firstItem="xIg-Mc-NCZ" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leading" id="ZpA-xG-fq3"/>
-                            <constraint firstItem="uEB-S6-HuN" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" constant="6" id="eP4-Qm-HwJ"/>
-                            <constraint firstItem="yif-oe-mfU" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" constant="6" id="g5l-bK-ai6"/>
-                            <constraint firstItem="uEB-S6-HuN" firstAttribute="top" secondItem="yif-oe-mfU" secondAttribute="bottom" constant="4" id="hsf-5q-0ax"/>
                             <constraint firstItem="hK3-5c-xfN" firstAttribute="leading" secondItem="suv-xQ-gUw" secondAttribute="leadingMargin" id="kcO-wp-HIZ"/>
                             <constraint firstItem="hK3-5c-xfN" firstAttribute="top" secondItem="D89-FB-fvn" secondAttribute="bottom" constant="10" id="kwD-Vj-1Hr"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="yif-oe-mfU" secondAttribute="trailing" constant="18" id="lPc-Dg-hq3"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="XYp-gt-P6U" secondAttribute="trailing" constant="18" id="mMv-By-amn"/>
-                            <constraint firstItem="yif-oe-mfU" firstAttribute="top" secondItem="XYp-gt-P6U" secondAttribute="bottom" constant="4" id="qIK-tb-66y"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -168,7 +120,7 @@
                                     <fragment content="120.00 Hz">
                                         <attributes>
                                             <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <font key="NSFont" size="36" name="AvenirNext-Regular"/>
+                                            <font key="NSFont" size="36" name="AvenirNext-Medium"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="natural" lineHeightMultiple="1" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
@@ -214,7 +166,7 @@
                     <navigationItem key="navigationItem" id="tRU-NP-Ahp"/>
                     <connections>
                         <outlet property="flashButton" destination="GRh-fv-0Z5" id="rAW-Wr-nHn"/>
-                        <outlet property="hertzLabel" destination="K2c-Xv-gFL" id="NPG-hq-kif"/>
+                        <outlet property="label" destination="K2c-Xv-gFL" id="0bY-Aw-qEl"/>
                         <outlet property="leftSwipeRecog" destination="5Ec-yW-E17" id="hcP-zf-Fo0"/>
                         <outlet property="panRecog" destination="pb9-wJ-OAG" id="HOK-Pd-hMb"/>
                         <outlet property="rightSwipeRecog" destination="iAh-zg-Kib" id="Ud4-Le-35k"/>
